--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,9 @@
     
     <link rel="stylesheet" href="/css/app.css"/>
 
+    <script type="text/javascript" src="/js/app.js"></script>
+
+
 </head>
 <body>
 
